# kinematic-hand-tracker

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
scripts/: install.bat  make_demo_gif.py  run.bat
src/: __init__.py  config.py  gesture_analyzer.py  hand_tracker.py  main.py  visual_effects.py
