[project]
name = "kinematic-hand-tracker"
version = "0.1.0"
description = "Real-time AR hand-tracking visualizer built with Python, OpenCV, and MediaPipe."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "opencv-python>=4.9.0",
    "mediapipe==0.10.21",
    "numpy>=1.26.0,<2.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
